# rep2recall-app

./: .gitignore  README.md  api.md  build.gradle  how-i-built.md  package.json  pyproject.toml  pyserver.py  settings.gradle  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/: .env.example  .gitignore  electron-builder.yml  environments.json  package.json  release-win-linux.sh  start.js  tsconfig.json  tsconfig.server.json  vue.config.js
app/public/: iframe.html  index.css  index.html
app/src/: background.ts  defaults.json
app/src/api-definitions/: editor.ts  io.ts  media.ts  quiz.ts
app/src/client/: App.vue  contextmenu.ts  global.ts  main.ts  utils.ts
app/src/server/: global.ts  index.ts
public/: index.html
script/: test.js
src/: cardEditor.ts  deckViewer.css  deckViewer.ts  imageEditor.ts  index.css  index.ts  main.ts  server.ts
src/backend/: config.ts  electron.ts  server.ts  tsconfig.json
src/backend/db/: QuizResource.ts  SearchParser.ts  SearchResource.ts  anki.ts  index.ts
src/backend/loki-plugin/: SearchParser.ts
src/backend/route/: card.ts  deck.ts  image.ts  io.ts  (+4 more)
src/node/: config.ts  electron.ts  server.ts  tsconfig.json  util.ts
src/python/: config.py  server.py  shared.py  util.py
src/renderer/: hot.css  hot.ts  util.ts
src/script/: get-mimetype.js  join.ts  open-appdirs.ts
src/server/: config.ts
src/web/: EditorUi.ts  ImportExport.ts  ImportUi.ts  QuizUi.ts  contextmenu.ts  index.scss  index.ts  shared.ts  util.ts
views/: deckViewer.html  hot.ejs  index.ejs  index.html
views/layout/: min.ejs
(+100 files in other folders)
