[tool.poetry]
name = "rep2recall"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4"
flask = "^1.0"
flask-cors = "^3.0"
pystache = "^0.5.4"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
